--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -47,18 +47,33 @@ const t = useTranslations(lang);
 						{t('about.paragraphs.intro')}
 					</p>
 					<p>
-						{t('about.paragraphs.experience')}
+						{t('about.paragraphs.journey')}
+					</p>
+					<p class="expertise-intro">
+						{t('about.paragraphs.expertise')}
 					</p>
 					<p>
-						{t('about.paragraphs.technologies')}
+						{t('about.paragraphs.skills')}
+					</p>
+					<p>
+						{t('about.paragraphs.experience')}
+					</p>
+					<p class="conclusion">
+						<strong>{t('about.paragraphs.conclusion')}</strong>
 					</p>
 					<ul class="skills-list">
 						<li>JavaScript (ES6+)</li>
 						<li>TypeScript</li>
 						<li>React</li>
 						<li>Node.js</li>
-						<li>Vue.js</li>
-						<li>Astro</li>
+						<li>Microservices</li>
+						<li>MongoDB</li>
+						<li>Redis</li>
+						<li>Docker</li>
+						<li>CI/CD</li>
+						<li>DDD</li>
+						<li>Clean Architecture</li>
+						<li>Hexagonal Architecture</li>
 					</ul>
 				</div>
 				<div class="about-image">
@@ -315,6 +330,22 @@ const t = useTranslations(lang);
 
 	.about-text p {
 		margin-bottom: 15px;
+	}
+
+	.about-text .expertise-intro {
+		font-weight: 500;
+		color: #64ffda;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+
+	.about-text .conclusion {
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+
+	.about-text .conclusion strong {
+		color: #64ffda;
 	}
 
 	.skills-list {
